# stereo2

./: CMakeLists.txt  README.md
files/: result.txt
src/: main.cpp  reader.cpp  reader.h  util.h  writer.cpp
